fixed card clipping and reworked button positioning

--- a/UniMeetApp/app/assets/stylesheets/application.scss
+++ b/UniMeetApp/app/assets/stylesheets/application.scss
@@ -229,7 +229,9 @@ a.owned-activities-links {
 
 //cards flip
 .card-flipper {
-    height: 415px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    height: 515px;
     width: 300px;
     overflow-x: hidden;
     overflow-y: auto;
@@ -238,13 +240,14 @@ a.owned-activities-links {
     -moz-perspective: 800px;
     -o-perspective: 800px;
     perspective: 800px;
-    
-
+        &::-webkit-scrollbar { 
+            display: none; 
+        }
 }
 
 .swipe-card {
     width: 100%;
-    height: 100%;
+    height: 415px;
     position: absolute;
     -webkit-transition: -webkit-transform 1s;
     -moz-transition: -moz-transform 1s;
@@ -431,7 +434,7 @@ a.owned-activities-links {
     text-decoration: none;
     left: 50%;
     margin-left: 133px;
-    margin-top: -0.5em;
+    margin-top: 35px;
     position: absolute;
     &:hover {
         text-decoration: none;
@@ -460,4 +463,20 @@ a.owned-activities-links {
     .circleBase {
         margin-left: 83px;
     }
+}
+.buttons {
+    margin-top: -45px;
+    position: absolute;
+    right: 50%;
+    a {
+        position: absolute;
+    }
+}
+.btn-left {
+    right: 50%;
+    margin-right: ($spacer * .25);
+}
+.btn-right {
+    left: 50%;
+    margin-left: ($spacer * .25);
 }
